[package]
name = "postfix-calculator"
version = "0.1.0"
authors = ["Christopher Persons <christopher.persons@rallyhealth.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { path = "../core/lib" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
path = "../contrib/lib"
default-features = false
features = ["json"]
